Fixed color contrast issue

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -31,7 +31,7 @@ footer {
 h1,
 h2 {
   font-family: var(--heading-font);
-  color: var(--secondary-color);
+  color: var(--primary-color);
   text-align: center;
   font-weight: var(--font-heading-weight);
 }
@@ -71,7 +71,7 @@ nav.navigation a {
     display: block;
     padding: 10px 20px;
     text-decoration: none;
-    color: var(--accent1-color);
+    color: var(--primary-color);
     font-size: 1.2rem;
 }
 
@@ -105,6 +105,7 @@ nav.navigation a:hover {
   text-align: center;
   opacity: 0.7;
   background-color: var(--primary-color);
+  color: var(--accent1-color);
 }
 
 .hero article {
@@ -154,10 +155,6 @@ nav.navigation a:hover {
     grid-gap: 1rem;
     align-items: center;
     text-align: center;
-}
-
-.adventure-background h2 {
-    color: var(--accent1-color);
 }
 
 .adventures figure img {
